--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "daisyui": "^5.1.27",
+    "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
-  }
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5"
+  },
+  "browserslist": "> 1%"
 }
