--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check --write",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "biome": "npm run lint && npm run format",
+    "test:schemas": "echo 'Visit http://localhost:3000/test-schemas in your browser to run schema validation tests' && npm run dev"
   },
   "dependencies": {
     "cross-env": "^10.1.0",
     "daisyui": "^5.1.27",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20",
+    "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.14",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "browserslist": "> 1%"
